<resources>
    <string name="app_name">TourGuideApp</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="city">City</string>
    <string name="hill">Hill</string>
    <string name="directions">Direction</string>
    <string name="mall">Mall</string>
    <string name="heading">Welcome To Jaipur</string>
    <string name="heading2">Attraction</string>
    <string name="heading3">Temple</string>
    <string name="heading4">Restaurant</string>
    <string name="heading5">Historical Places</string>
    <string name="heading6">Welcome To Shimla</string>
    <string name="heading8">Temple</string>
    <string name="heading9">Local Shopping</string>
    <string name="heading10">The World Trade Park(WTP)</string>
    <string name="detail">The construction of World Trade Park Jaipur is worth Rs. 350 crores. The construction took two years for its development. The building has two different blocks; one in North and other in South, separated by city street. The two buildings are joined by a bridge, which has restaurants</string>
    <string name="detail1">World Trade Park Jaipur was inaugurated by the Bollywood star Shah Rukh Khan in 2012.</string>
    <string name="detail2">World Trade Park Jaipur includes a display system where 24 projectors create a single image on its ceiling. This is the first system of its kind in the world.[citation needed] WTP was award (Mall of the Year) and (Best Architect) by BCI India.[citation needed] World Trade Park, Jaipur is the second-largest shopping mall in India by size (2,400,000 sq ft (220,000 m²) gross leasable area).</string>
    <string name="detail3">World Trade Park is a shopping mall in Malviya Nagar, Jaipur, Rajasthan, India. It opened at the end of 2012</string>
    <string name="overview">Overview</string>
    <string name="overview1">Jaipur, the capital of the state of Rajasthan, was founded on 18 November 1727, by Raja Sawai Singh II. It is one of the planned cities of India and is a principal tourist destination. It is filled with ancient forts and monuments that boast of its glorious past. A large number of temples and other religious places reflect the spiritual value of the dynasties of the past, who built them. Apart from the forts and temples, a good number of gardens also enhance the effervescent beauty of Jaipur.</string>
    <string name="name">1. Galtaji</string>
    <string name="name2">A pre-historic Hindu pilgrimage site, the Galtaji Temple, is located only 10km away from Jaipur. One of the jewels of Jaipur, the temple complex encompasses natural fresh water springs and 7 holy ‘kunds' or water tanks. Among these kunds, the ‘Galta Kund', is the holiest one and is believed to never get dry.</string>
    <string name="name3">2. Birla Temple</string>
    <string name="name4">The Birla Temple, originally known as Lakshmi Narayan Temple, and is situated below the Moti Dungri Fort in Jaipur. Dedicated to Lord Vishnu and Goddess Lakshmi, this temple is a proud architectural landmark of Jaipur. Built in pure white marble, the Birla Temple is unlike the traditional ancient Hindu temples, and is built with a modern approach.</string>
    <string name="name5">3. Govind Jain Ji Temple</string>
    <string name="name6">The temple of Govind Dev Ji is one of the most sacred and famous tourist destinations in India. It is located in the City Palace complex, in Jaipur, Rajasthan. The deity, Govind Dev Ji, is none other than Lord Shri Krishna himself. It is believed that the image in this temple looks exactly how Lord Krishna looked during his incarnation on earth.</string>
    <string name="res1">1.Okra</string>
    <string name="res2">#2 of 3,061 Restaurants in Jaipur</string>
    <string name="res3">#₹₹₹₹ Indian, Asian, International</string>
    <string name="res4">2.Jal Mahal</string>
    <string name="res5">#4 of 3,061 Restaurants in Jaipur</string>
    <string name="res6">₹₹ - ₹₹₹ Indian, Asian, Vegetarian Friendly</string>
    <string name="res7">3.Sheesh Mahal</string>
    <string name="res8">#5 of 3,061 Restaurants in Jaipur</string>
    <string name="res9">₹₹ - ₹₹₹ Indian, Bar, Wine Bar</string>
    <string name="his1">1.Rambagh Place</string>
    <string name="his2">The Jewel of Jaipur, Rambagh Palace truly lives up to this name as it is one of the most beautiful palaces in India.</string>
    <string name="his3">2.Nahargarh Fort</string>
    <string name="his4">Forming an impressive backdrop of Jaipur is the humongous Nahargarh fort. It was built by Jai Singh for the protection of Amer in 1734</string>
    <string name="his5">3.Jaigarh Fort</string>
    <string name="his6">The Jaigarh Fort is the most imposing and spectacular fort that overlooks Jaipur. It is famous for the Jaivana canon, considered the largest canon in the world.…</string>
    <string name="his7">4.Hawa Mahal</string>
    <string name="rest1">1.The Restaurant of Oberoi WildFlower Hall</string>
    <string name="rest2">#1 of 2 Restaurants in Mashobra</string>
    <string name="rest3">#₹₹₹₹ Chinese Indian European Contemporary Asian Vegetarian Friendly Vegan</string>
    <string name="rest4">2.Sagar Ratna, Mall Road</string>
    <string name="rest5">#13 of 110 Restaurants in Shimla</string>
    <string name="rest6">₹₹ - ₹₹₹ Chinese Indian Fast food Street Food Asian Vegetarian Friendly Veg</string>
    <string name="rest7">3.Moti Mahal Delux Restaurant</string>
    <string name="rest8">#14 of 110 Restaurants in Shimla</string>
    <string name="rest9">₹₹ - ₹₹₹ Indian Chinese Asian Vegetarian Friendly Vegan Options</string>
    <string name="rest10">4.Tripti Reataurant</string>
    <string name="rest11">#15 of 110 Restaurants in Shimla</string>
    <string name="rest12">₹₹ - ₹₹₹ Indian Vegetarian Friendly Vegan Options</string>
    <string name="overview11">During this temple tour, you will explore the beauty, culture and traditions of three of Shimla's most famous temples. Follow your expert guide through the city streets and visit most famous temples Jakhoo, Kalibari and the Sankat mochan. Learn about the architecture, beliefs and local heritage as you explore and enjoy an Indian breakfast before returning to your hotel.</string>
    <string name="temp1">1. Jhakhu Temple</string>
    <string name="temp2">Legend and myth suggests that the monkey Lord Hanuman rested here while on his search for the Sanjivini Booti (a kind of herb). He met sage Yaaku on the hilltop and then moved ahead in his journey. It is also believed that the sage built this temple. Devotees from all over the country come here, especially at the time of Dussehra festival celebrations.</string>
    <string name="temp3">2. Tara Devi Mandir</string>
    <string name="temp4">Visit Tara Devi Temple and enjoy sweeping views of the Himalaya valley and verdant peaks beyond. Relax in the peaceful surroundings and serene atmosphere of the temple, built over 250 years ago atop a lush hill. Remember to remove your shoes upon entry to the site, and beware the light-fingered monkeys in the area, who apparently won't hesitate to take your phone.</string>
    <string name="temp5">3. Mata Hakoti Temple</string>
    <string name="temp6">Hatkoti Temple in Shimla, dedicated to Goddess Durga and Lord Shiva, is one of the main tourist attractions in and around Shimla. Lying along the River Pabbar, at village Hatkoti of tehsil Jubbal 104 km from Shimla, the temple is believed to be the spot where the gods fought a pitched battle. The spot is famous for ancient temple of Mata Hateswari in the midst of paddy fields on the right bank of the Pabber River.</string>
    <string name="temp7">More Temple</string>
    <string name="local1">1.Ridge</string>
    <string name="local2">This is the most popular point in Shimla. Located on the Mall road, at the heart of Shimla, this is a much loved and enjoyed stretch here, where visitors come and soak themselves in the views of surrounding areas.</string>
    <string name="local3">2.Mall Road</string>
    <string name="local4">Shopping in Shimla revolves around the heart of the town- The Mall Road. One can shop for local handicrafts, shawls, woolens, exquisite jewelry etc. here.</string>
    <string name="local5">3.Kufri</string>
    <string name="local6">While in Shimla, visit its colder, higher and less crowded cousin, Kufri just 13 km away from the main town. The views and sceneries here only get better, and the landscapes more flattering, a bit untouched with the tourist rush.</string>
    <string name="local7">More Local Site</string>
    <string name="hist1">The Shimla State Museum</string>
    <string name="hist2">Visitor Information</string>
    <string name="hist3">1.Famous for: Nature,Photography,Adventure.</string>
    <string name="hist4">2.Tickets: 20INR for Indians,100INR for foreingner plus 50INR(Indians) and 100INR(Foreigner) for photography.</string>
    <string name="hist5">3.Opening Timings: Open all days except Monday from 10am to 5pm.</string>
    <string name="hist6">4.Duration: 1-2 hours.</string>
    <string name="hist7">The SHIMLA STATE MUSEUM is situated at the top of Mount Pleasent. Also known as Himachal State Museum and Library, it was built in the year 1974. It was constructed to preserve the cultural richness of the state and to record its rich past.</string>
    <string name="hist8">For more Info Click Here</string>
    <string name="goo1">Google Map</string>
    <string name="goo2">Here you can search for the location</string>
    <string name="goo3">Just enter the name of the location.</string>
    <string name="goo4">Click on the image</string>
    <string name="mall1">List of Some Top Malls in India</string>
    <string name="mall2"> Lulu International Mall, Kochi</string>
    <string name="mall3">Lulu International Mall gives you the feel of an international mega mall. Its roof shines in sunlight. Total Floors 5 Total Multiplex 9 Screen of PVR Cinemas Multiplex Food 3 Restaurants and 4500 People can take food at a time with 18 multi cuisine kitchens. Facilities for Entertainment Party Hall, Indoor Climbing, Rides, Amusement, 5D Cinema and Arcade Games Business Facilities Foreign Exchange Counters, Banking Counters and much more. Started in 2013, the mall has nearly 365 outlet shops.</string>
    <string name="mall4"> Select City Walk, New Delhi</string>
    <string name="mall5">Select City Walk opened in 2007, is the ninth largest mall in India. The best part of this mall is that it is divided into three traditional areas for the Staple Traditional family, Celebration centre-stage and High Voltage youth. It has over 125 stores and several Indian and global brands.</string>
    <string name="mall6"> Phoenix Market City, Mumbai</string>
    <string name="mall7">Phoenix Market City is actually a city in itself. Total area 4,000,000 square makes Phoenix Market City Mumbai is the largest mall in India and also in Asia. Total Stores 600 Retail Outlet/Stores Multiplex Screen 14 Movie Screens Restaurants More than 20 Restaurants</string>
    <string name="mall8"> Elante Mall, Chandigarh</string>
    <string name="mall9">Elante Mall is a shopping mall in the city of Chandigarh in India. With the gross leasable area of 1,150,000 sqft, it is the second largest shopping mall in Northern India and the third largest in India. Elante Mall hosts ious Indian and international brands like Big Bazaar, Westside, Pantaloons, Lifestyle and Gucci among others. The Mall also has an 8-screen.</string>
</resources>